--- a/index.html
+++ b/index.html
@@ -3,14 +3,96 @@
 <head>
   <meta charset="UTF-8">
   <title>r6stats</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
   <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+  <script type="text/javascript"
+          src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript"
+          src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 </head>
 <body>
 
-<img class="ui background image" src="https://r6stats.com/images/background/season20.jpg">
+<div class="grad-background">
+  <div class="ui container">
+    <div class="ui borderless topmenu menu">
+      <img class="ui image item" src="https://r6stats.com/images/logos/r6stats-full.svg"
+           width="150px">
+      <a class="item" style="color:white">Leaderboards</a>
+      <a class="item" style="color:white">Compare</a>
+      <a class="item" style="color:yellow">Premium</a>
+      <a class="item" style="color:white">Login</a>
+      <a class="left item" style="color:white">Register</a>
+      <div class="ui left icon input">
+        <i class="search icon"></i>
+        <input type="text" placeholder="Search for players...">
+      </div>
+    </div>
+
+    <h2>
+      track <a class="text" style="color:yellow">your progress</a>
+      <h4>View and compare your Rainbow Six: Siege statistics with millions of other players around
+        the world!</h4>
+    </h2>
+    <h3>
+      <div class="ui left icon black input">
+        <i class="search icon"></i>
+        <input type="text" placeholder="Search for players...">
+      </div>
+    </h3>
+
+  </div>
+</div>
+
+<div class="footer-background">
+  <img class="ui image item" src="https://r6stats.com/images/logos/r6stats-full.svg" width="150px">
+  <div class="ui dropdown">
+    <div class="text" style="color:white">English</div>
+    <i class="dropdown icon" style="color:white"></i>
+    <div class="menu">
+      <div class="item" style="color:white">English</div>
+      <div class="item" style="color:white">Deutsch</div>
+      <div class="item" style="color:white">Espanol</div>
+    </div>
+  </div>
+  <div class="ui grid">
+    <div class="four wide column" style="color:white">
+      <a class="text" style="color:white">Links</a>
+      <div class="ui list">
+        <p class="text" style="color:gray">Home</p>
+        <p class="text" style="color:gray">Leaderboards</p>
+        <p class="text" style="color:gray">Compare</p>
+        <p class="text" style="color:gray">Premium</p>
+      </div>
+    </div>
+
+    <div class="four wide column" style="color:white">
+      <a class="text" style="color:white">Infos</a>
+      <div class="ui list">
+        <p class="text" style="color:gray">Delete R6Stats Profile</p>
+        <p class="text" style="color:gray">Privacy Policy</p>
+      </div>
+    </div>
+    <div class="four wide column" style="color:white">
+      <a class="text" style="color:white">Follow Us</a>
+      <div class="ui list">
+        <a class="fitted item" style="color:gray"><i class="twitter icon"></i></a>
+        <a class="fitted item" style="color:gray"><i class="discord icon"></i></a>
+        <a class="fitted item" style="color:gray"><i class="reddit icon"></i></a>
+        <a class="fitted item" style="color:gray"><i class="envelope icon"></i></a>
+      </div>
+    </div>
+    <div class="four wide column" style="color:white">
+      <a class="text" style="color:white">Get our apps</a>
+      <div class="ui list">
+        <img class="ui image item" src="https://r6stats.com/images/badges/apple_badge_en.svg"
+             width="150px">
+        <img class="ui image item" src="https://r6stats.com/images/badges/google_play_badge_en.svg"
+             width="150px">
+      </div>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
